@@ -1,5 +1,5 @@
 /*
-    Copyright 2007-2012, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2007-2016, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -9,7 +9,7 @@
 #include "fost-core.hpp"
 #include <fost/parse/json.hpp>
 
-
+#include <fost/unicode.hpp>
 #include <fost/exception/parse_error.hpp>
 
 
@@ -24,7 +24,24 @@ fostlib::json fostlib::json::parse( const string &toparse ) {
     return ret;
 }
 
-fostlib::json fostlib::json::parse( const string &toparse, const json &def ) {
+
+fostlib::json fostlib::json::parse(array_view<unsigned char> buffer) {
+    /// What we really want to be able to do is to parse the UTF32 stream
+    /// coming straight out of the buffer. The problem is that the \u
+    /// escape sequences (which are UTF-16) make this very hard to do without
+    /// making mistakes. Instead we're going to end up turning this into a
+    /// UTF-16 buffer and then parse that. Sigh
+    const auto u8 = utf::u8_view(buffer);
+    const auto str = string(u8.begin(), u8.end());
+    const auto prs = coerce<std::wstring>(str);
+    json ret;
+    const auto res = boost::spirit::parse(prs.c_str(), json_p[phoenix::var(ret) = phoenix::arg1]);
+    if ( not res.full ) throw fostlib::exceptions::parse_error( L"Whilst parsing JSON string", str );
+    return ret;
+}
+
+
+fostlib::json fostlib::json::parse(const string &toparse, const json &def) {
     fostlib::parser_lock lock;
     fostlib::json ret;
     fostlib::json_parser parser;
@@ -35,3 +52,4 @@ fostlib::json fostlib::json::parse( const string &toparse, const json &def ) {
     else
         return ret;
 }
+
