@@ -1,5 +1,5 @@
 /*
-    Copyright 2015, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2015-2016, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -9,7 +9,8 @@
 #pragma once
 
 
-#include <fost/core>
+#include <array>
+#include  <vector>
 
 
 namespace fostlib {
@@ -73,8 +74,17 @@ namespace fostlib {
         const_reverse_iterator rend() const {
             return const_reverse_iterator(begin());
         }
+
+        /// Are two buffers equal
+        bool operator == (const array_view av) const {
+            return data() == av.data() && size() == av.size();
+        }
     };
 
 
 }
 
+
+#ifndef FOST_CONFIG_HPP
+#include <fost/core>
+#endif // FOST_CONFIG_HPP
