@@ -1,5 +1,5 @@
 /*
-    Copyright 2001-2013, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2001-2016, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -11,6 +11,7 @@
 #pragma once
 
 
+#include <fost/array>
 #include <fost/file.hpp>
 
 
@@ -54,6 +55,53 @@ namespace fostlib {
             return encode( codepoint, reinterpret_cast< utf8 * >( begin ), reinterpret_cast< utf8 * >( end ) );
         }
         FOST_CORE_DECLSPEC std::size_t encode( utf32 codepoint, utf16 *begin, const utf16 *end );
+
+
+        /// For unsigned char types with an UTF-8 encoding
+        class u8_view {
+            array_view<unsigned char> buffer;
+        public:
+            u8_view(array_view<unsigned char> b)
+            : buffer(b) {
+            }
+
+            /// An iterator that spits out UTF32 code points from the string
+            class const_iterator {
+                friend class u8_view;
+                array_view<unsigned char> buffer;
+
+                const_iterator(array_view<unsigned char> b)
+                : buffer(b) {
+                }
+            public:
+                typedef void difference_type;
+                typedef utf32 value_type;
+                typedef unsigned char *pointer;
+                typedef utf32 reference;
+                typedef std::forward_iterator_tag iterator_category;
+
+                utf32 operator * () const {
+                    return decode(reinterpret_cast<nliteral>(buffer.begin()),
+                        reinterpret_cast<nliteral>(buffer.end()));
+                }
+                const_iterator &operator ++ () {
+                    const auto here = **this;
+                    const auto bytes = utf8length(here);
+                    buffer = array_view<unsigned char>(buffer.data() + bytes, buffer.size() - bytes);
+                    return *this;
+                }
+                bool operator == (const_iterator it) const {
+                    return buffer == it.buffer;
+                }
+            };
+
+            const_iterator begin() const {
+                return buffer;
+            }
+            const_iterator end() const {
+                return array_view<unsigned char>(buffer.data() + buffer.size(), 0u);
+            }
+        };
 
 
     }
